# eventweave

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  ecommerce.yaml  security.yaml
docs/: agent-evaluation.md  demo-stack.md  design.md  encoders.md  go-runtime.md  golden-baseline.md  local-runtime.md  multi-source-runtime.md  pack-authoring.md  pack-spec.md  runtime-batching.md  runtime-observability.md  scenario-dsl.md  security.md  semantic-sidecar.md  synthetic-realism.md
eventweave/ai/: __init__.py  ai_config.py  ai_provider.py  cache.py  mock_provider.py  provider.py  resolver.py  sidecar.py  template_provider.py  validator.py
eventweave/cli/: helpers.py  main.py
eventweave/compiler/: __init__.py  duration.py  engine.py  errors.py  jitter.py  loader.py  noise_generator.py  pack_loader.py  planner.py  realism_resolver.py  rules.py  schema_validator.py  semantic_task_builder.py  writer.py
eventweave/core/: __init__.py  entity.py  event.py  ground_truth.py  jitter.py  noise.py  realism_profile.py  relation.py  runtime_plan.py  scenario.py  semantic.py  sink.py  source.py  timeline.py
eventweave/encoders/: __init__.py  base.py  enrichment.py  go_compat.py  jsonl.py  nginx.py  registry.py  syslog.py
eventweave/evaluation/: __init__.py  agent_output.py  benchmark.py  evaluator.py  io.py  report.py  runner.py  validator.py
eventweave/exporters/: jsonl.py
eventweave/pack/: __init__.py  scaffold.py
eventweave/quality/: __init__.py  realism.py
eventweave/runtime/: __init__.py  clock.py  loader.py  local.py  scheduler.py  sink.py  stats.py
examples/demo-stack/: docker-compose.yml  prometheus.yml  run_demo.sh  security_demo.yaml  security_multi_source.yaml
examples/ecommerce/: payment_failure_spike.yaml  (+2 more)
runtime-go/: go.mod  go.sum
scripts/: update_golden.py
tests/: conftest.py  test_bad_scenarios.py  test_compiler.py  test_demo_stack.py  test_golden.py  test_loader.py  test_pack_registry.py  test_pack_scaffold.py  test_planner.py  test_realism_profiles.py  test_rules.py
(+224 files in other folders)
